# python-a2a

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  DOCUMENTATION.md  MANIFEST.in  Makefile  PUBLICATION_GUIDE.md  README.md  README_de.md  README_es.md  README_fr.md  README_ja.md  README_zh.md  RUN_UI.md  diagnose_a2a.py  pyproject.toml  release.sh  requirements.txt  setup.py  start_ui.py
.github/workflows/: build.yml  python-tests-uv.yml
.uv/: UVManifest.toml  config.toml
agent_flow/: GETTING_STARTED.md  README.md  SUMMARY.md  __init__.py
agent_flow/engine/: executor.py
agent_flow/examples/: mcp_workflow.py  weather_trip_planner.py
agent_flow/models/: workflow.py
agent_flow/server/: api.py
docs/: conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  uv-installation.rst
docs/examples/: advanced.rst  agent_discovery.rst  index.rst  langchain.rst  langchain_agents.rst  simple.rst
docs/guides/: advanced.rst  agent_discovery.rst  agent_flow.rst  basics.rst  index.rst  langchain.rst  mcp.rst
examples/: README.md  a2a_client_example.py  a2a_server_example.py  client_example.py  docs_generation_example.py  docs_server_example.py  simple_agent.py  validate_all_examples.py
examples/agent_network/: agent_discovery.py  agent_network.py  agent_registry.py  smart_routing.py
examples/ai_powered_agents/: anthropic_agent.py  bedrock_agent.py  llm_client.py  openai_agent.py
examples/applications/: openai_travel_planner.py  weather_assistant.py
examples/applications_local_model/: config.json  openai_travel_planner.py  openai_travel_planner_zh.py  readme.md
examples/basic/: simple_client.py
examples/building_blocks/: agent_discovery.py  agent_skills.py  messages_and_conversations.py  tasks.py
examples/chain/: agent_chain.py  planning_agent.py  weather_agent.py
examples/developer_tools/: cli_tools.py  interactive_docs.py  testing_agents.py
examples/function_calling/: calculator_agent.py
examples/getting_started/: function_calling.py  hello_a2a.py  simple_client_thirdparty_googlea2a_server.py  simple_server.py
examples/langchain/: a2a_to_langchain.py  langchain_advanced_agent.py  langchain_agent_with_tools.py  langchain_streaming.py  langchain_to_a2a.py  langchain_tools_to_mcp.py  mcp_to_langchain.py
examples/llm/: bedrock_agent.py  openai_agent.py
examples/mcp/: a2a_integration_example.py  agent_with_mcp_tools.py  browserbase_example.py  code_review_assistant.py  fastmcp_example.py  filesystem_example.py  github_example.py  intelligent_mcp_agent.py  kite_mcp_example.py  mcp.py  mcp_agent.py  mcp_client_example.py  mcp_tools.py  openai_mcp_agent.py  playwright_example.py  puppeteer_example.py
examples/push_notification/: push_notification_example.py
examples/streaming/: 01_basic_streaming.py  02_advanced_streaming.py  03_streaming_llm_integration.py  04_task_based_streaming.py  05_streaming_ui_integration.py  (+3 more)
notebooks/: 01_basic_agent_conversation.ipynb  02_llm_powered_agents.ipynb
python_a2a/: __init__.py  cli.py  exceptions.py
tests/: __init__.py  basic_test.py  conftest.py  test_cli.py  test_client.py  test_discovery.py  test_exceptions.py  test_google_a2a_compatibility.py  test_langchain.py  test_mcp_client.py  test_models.py  test_server.py  test_utils.py
(+64 files in other folders)
